(chore) pushing more header stuff

--- a/backend/views/pages/header.pug
+++ b/backend/views/pages/header.pug
@@ -16,8 +16,9 @@ block content
                 strong.hide-mobil great.gov.uk
     .background--great-blue.cf
       .outer-container
-        a.float--left(href='https://www.export.great.gov.uk/', title='Go to the Exporting is GREAT homepage')
-          img.globalHeader__eiglogo(alt='Exporting is GREAT logo', src='/images/EiG_logo_horizontal.svg')
+        .logoBar.cf
+          a.float--left(href='https://www.export.great.gov.uk/', title='Go to the Exporting is GREAT homepage')
+            img.logoBar__logo-eig(alt='Exporting is GREAT logo', src='/images/EiG_logo_horizontal.svg')
     .background--dark-blue.cf
       .outer-container
         nav.navigationBar
