Add chevrons to docs

--- a/frontend/styles/great-pattern-library.scss
+++ b/frontend/styles/great-pattern-library.scss
@@ -29,6 +29,7 @@
 @import 'components/footer';
 @import 'components/steps';
 @import 'components/panels';
+@import 'components/chevrons';
 
 // new components
 @import '../components/TabSwitcher/styles/TabSwitcher';
