--- a/frontend/styles/neat/_grid-settings.scss
+++ b/frontend/styles/neat/_grid-settings.scss
@@ -19,5 +19,5 @@ $tablet: (max-width: 959px) and (min-width 768px);
 
 $media-mobile-up: '(min-width: 768px)';
 $media-mobile: '(max-width: 767px)';
-$media-tablet: '(min-width: 768px) and (max-width: 959px)';
+$media-tablet: '(min-width: 768px)';
 $media-desktop: '(min-width: 960px)';
