--- a/frontend/styles/utilities/_placeholders.scss
+++ b/frontend/styles/utilities/_placeholders.scss
@@ -1,3 +1,4 @@
+// sass-lint:disable no-duplicate-properties
 %anchor-white {
   a {
     color: $white;
@@ -24,7 +25,7 @@
 }
 
 %login-active {
-  &:after {
+  &::after {
     border-top: 3px solid $great-red;
     content: '';
     left: 0;
