(feature) adding basic link classes

--- a/backend/views/pages/header.pug
+++ b/backend/views/pages/header.pug
@@ -55,34 +55,34 @@ block content
               h3.megaMenu__heading.hide-mobile Export readiness
               ul.megaMenu__list
                 li.megaMenu__list__item.megaMenu__list__item--primary
-                  a(title='new to exporting', href='https://www.export.great.gov.uk/new/') New to exporting
+                  a(title='new to exporting', href='https://www.export.great.gov.uk/new/', class='link link--white') New to exporting
                 li.megaMenu__list__item.megaMenu__list__item--primary
-                  a(title='occasional exporter', href='https://www.export.great.gov.uk/occasional/') Occasional exporter
+                  a(title='occasional exporter', href='https://www.export.great.gov.uk/occasional/', class='link link--white') Occasional exporter
                 li.megaMenu__list__item.megaMenu__list__item--primary
-                  a.last(title='regular exporter', href='https://www.export.great.gov.uk/regular/') Regular exporter
+                  a.last(title='regular exporter', href='https://www.export.great.gov.uk/regular/', class='link link--white') Regular exporter
             .column-one-quarter.collapse-on-mobile
               h3.megaMenu__heading.hide-mobile Online tools
               ul.megaMenu__list
                 li.megaMenu__list__item
-                  a(href='https://www.export.great.gov.uk/opportunities', title='Export opportunities') Export opportunities
+                  a(href='https://www.export.great.gov.uk/opportunities', title='Export opportunities', class='link link--white') Export opportunities
                 li.megaMenu__list__item
-                  a.navigation-toggle-active(href='http://find-a-buyer.export.great.gov.uk/', title='Find a buyer') Find a buyer
+                  a.navigation-toggle-active(href='http://find-a-buyer.export.great.gov.uk/', title='Find a buyer', class='link link--white') Find a buyer
                 li.megaMenu__list__item
-                  a(href='https://selling-online-overseas.export.great.gov.uk/markets/', title='Selling online overseas') Selling online overseas
+                  a(href='https://selling-online-overseas.export.great.gov.uk/markets/', title='Selling online overseas', class='link link--white') Selling online overseas
             .column-one-quarter.collapse-on-mobile
               h3.megaMenu__heading.hide-mobile Other support
               ul.megaMenu__list
                 li.megaMenu__list__item
-                  a(href='https://export.great.gov.uk/get-finance/', title='Get finance') Get finance
+                  a(href='https://export.great.gov.uk/get-finance/', title='Get finance', class='link link--white') Get finance
                 li.megaMenu__list__item
-                  a(href='https://events.trade.gov.uk/', title='Events') Events
+                  a(href='https://events.trade.gov.uk/', title='Events', class='link link--white') Events
             .column-one-quarter.collapse-on-mobile
               h3.megaMenu__heading.hide-mobile About us
               ul.megaMenu__list
                 li.megaMenu__list__item
-                  a(href='https://www.export.great.gov.uk/about/', title='About great.gov.uk') About great.gov.uk
+                  a(href='https://www.export.great.gov.uk/about/', title='About great.gov.uk', class='link link--white') About great.gov.uk
                 li.megaMenu__list__item
-                  a.last(href='https://contact-us.export.great.gov.uk/selling_online_overseas', title='Contact us') Contact us
+                  a.last(href='https://contact-us.export.great.gov.uk/selling_online_overseas', title='Contact us', class='link link--white') Contact us
 
 
       
