--- a/static/styles/library.css
+++ b/static/styles/library.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
-.outer-container {
+.gpl-outer-container {
   margin: 0 auto;
   max-width: 1200px;
   padding: 0 30px;
