--- a/frontend/styles/library.scss
+++ b/frontend/styles/library.scss
@@ -1,6 +1,6 @@
 @import 'utilities/vars';
 
-.outer-container {
+.gpl-outer-container {
   margin: 0 auto;
   max-width: 1200px;
   padding: 0 30px;
