--- a/frontend/styles/utilities/_mixins.scss
+++ b/frontend/styles/utilities/_mixins.scss
@@ -31,6 +31,21 @@
   }
 }
 
+@mixin link-notch($color: $great-red, $left: 0, $top: 0) {
+  &::after {
+    border-bottom: 10px solid transparent;
+    border-left: 15px solid $color;
+    border-top: 10px solid transparent;
+    content: '';
+    height: 0;
+    left: $left;
+    pointer-events: none;
+    position: absolute;
+    top: $top;
+    width: 0;
+  }
+}
+
 @mixin bottom-margin($multiple: 1) {
   margin-bottom: (15px * $multiple);
 }
