--- a/backend/views/pages/header.pug
+++ b/backend/views/pages/header.pug
@@ -47,42 +47,43 @@ block content
             span.megaMenuToggle__text All
 
     input#megaMenu-disclosure.visuallyhidden(type='checkbox')
-    div#megaMenu.megaMenu
+    div#megaMenu-wrapper
       .background--dark-navy
         .outer-container.collapse-on-mobile
-          .grid-container
-            .column-one-quarter.collapse-on-mobile
-              h3.megaMenu__heading.hide-mobile Export readiness
-              ul.megaMenu__list
-                li.megaMenu__list__item.megaMenu__list__item--primary
-                  a(title='new to exporting', href='https://www.export.great.gov.uk/new/', class='link link--white') New to exporting
-                li.megaMenu__list__item.megaMenu__list__item--primary
-                  a(title='occasional exporter', href='https://www.export.great.gov.uk/occasional/', class='link link--white') Occasional exporter
-                li.megaMenu__list__item.megaMenu__list__item--primary
-                  a.last(title='regular exporter', href='https://www.export.great.gov.uk/regular/', class='link link--white') Regular exporter
-            .column-one-quarter.collapse-on-mobile
-              h3.megaMenu__heading.hide-mobile Online tools
-              ul.megaMenu__list
-                li.megaMenu__list__item
-                  a(href='https://www.export.great.gov.uk/opportunities', title='Export opportunities', class='link link--white') Export opportunities
-                li.megaMenu__list__item
-                  a.navigation-toggle-active(href='http://find-a-buyer.export.great.gov.uk/', title='Find a buyer', class='link link--white') Find a buyer
-                li.megaMenu__list__item
-                  a(href='https://selling-online-overseas.export.great.gov.uk/markets/', title='Selling online overseas', class='link link--white') Selling online overseas
-            .column-one-quarter.collapse-on-mobile
-              h3.megaMenu__heading.hide-mobile Other support
-              ul.megaMenu__list
-                li.megaMenu__list__item
-                  a(href='https://export.great.gov.uk/get-finance/', title='Get finance', class='link link--white') Get finance
-                li.megaMenu__list__item
-                  a(href='https://events.trade.gov.uk/', title='Events', class='link link--white') Events
-            .column-one-quarter.collapse-on-mobile
-              h3.megaMenu__heading.hide-mobile About us
-              ul.megaMenu__list
-                li.megaMenu__list__item
-                  a(href='https://www.export.great.gov.uk/about/', title='About great.gov.uk', class='link link--white') About great.gov.uk
-                li.megaMenu__list__item
-                  a.last(href='https://contact-us.export.great.gov.uk/selling_online_overseas', title='Contact us', class='link link--white') Contact us
+          .megaMenu
+            .grid-container
+              .column-one-quarter.collapse-on-mobile
+                h3.megaMenu__heading.hide-mobile Export readiness
+                ul.megaMenu__list
+                  li.megaMenu__list__item.megaMenu__list__item--primary
+                    a(title='new to exporting', href='https://www.export.great.gov.uk/new/', class='') New to exporting
+                  li.megaMenu__list__item.megaMenu__list__item--primary
+                    a(title='occasional exporter', href='https://www.export.great.gov.uk/occasional/', class='') Occasional exporter
+                  li.megaMenu__list__item.megaMenu__list__item--primary.megaMenu__list__item--last
+                    a.last(title='regular exporter', href='https://www.export.great.gov.uk/regular/', class='') Regular exporter
+              .column-one-quarter.collapse-on-mobile
+                h3.megaMenu__heading.hide-mobile Online tools
+                ul.megaMenu__list
+                  li.megaMenu__list__item
+                    a(href='https://www.export.great.gov.uk/opportunities', title='Export opportunities', class='') Export opportunities
+                  li.megaMenu__list__item
+                    a.navigation-toggle-active(href='http://find-a-buyer.export.great.gov.uk/', title='Find a buyer', class='') Find a buyer
+                  li.megaMenu__list__item
+                    a(href='https://selling-online-overseas.export.great.gov.uk/markets/', title='Selling online overseas', class='') Selling online overseas
+              .column-one-quarter.collapse-on-mobile
+                h3.megaMenu__heading.hide-mobile Other support
+                ul.megaMenu__list
+                  li.megaMenu__list__item
+                    a(href='https://export.great.gov.uk/get-finance/', title='Get finance', class='') Get finance
+                  li.megaMenu__list__item
+                    a(href='https://events.trade.gov.uk/', title='Events', class='') Events
+              .column-one-quarter.collapse-on-mobile
+                h3.megaMenu__heading.hide-mobile About us
+                ul.megaMenu__list
+                  li.megaMenu__list__item
+                    a(href='https://www.export.great.gov.uk/about/', title='About great.gov.uk', class='') About great.gov.uk
+                  li.megaMenu__list__item.megaMenu__list__item--last
+                    a.last(href='https://contact-us.export.great.gov.uk/selling_online_overseas', title='Contact us', class='') Contact us
 
 
       
