--- a/frontend/styles/components/_header.scss
+++ b/frontend/styles/components/_header.scss
@@ -1,131 +1,7 @@
-// sass-lint:disable mixins-before-declarations, no-ids, no-duplicate-properties, declarations-before-nesting
-
-.topBar {
-  height: 2em;
-
-  &__logo-hmg {
-    display: block;
-    padding: 0 5px 0 2px;
-    position: relative;
-    top: 6px;
-
-    img {
-      display: block;
-    }
-
-    &::after {
-      color: $grey-opacity-5;
-      content: '|';
-      font-size: 20px;
-      position: absolute;
-      right: -6px;
-      top: -2px;
-    }
-  }
-
-  &__logo-tagline {
-    color: $porcelain;
-    display: block;
-    font-size: 14px;
-    font-weight: 300;
-    left: 15px;
-    position: relative;
-    text-decoration: none;
-    top: 1px;
-
-    span {
-      margin-right: 5px;
-    }
-
-    &:hover {
-      border-bottom: 1px dashed;
-      color: $white;
-      margin-bottom: -1px;
-    }
-
-    strong {
-      color: $white;
-      font-weight: 400;
-    }
-  }
-}
-
-.logoBar {
-  height: 55px;
-
-  @include tablet {
-    width: 100%;
-  }
-
-  &__logo-eig {
-    padding: 17px 0 4px;
-    width: 70%;
-    @include tablet {
-      width: 100%;
-    }
-  }
-}
-
-.navigationBar {
-  display: none;
-  height: 38px;
-  overflow: hidden;
-
-  @include tablet {
-    display: block;
-  }
-
-  &__list {
-    height: 38px;
-    list-style: none;
-    position: relative;
-    width: 110%;
-
-    &__item {
-      display: inline-block;
-      position: relative;
-      @include separator(20px, $grey-opacity-5, -1px, 7px);
-    }
-
-    &__item--noSeparator {
-      @include separator(0);
-    }
-  }
-
-  &__link {
-    background-color: $dark-blue;
-    color: $white;
-    display: block;
-    font-size: 15px;
-    font-weight: 300;
-    margin: 3px;
-    outline: 3px solid $dark-blue;
-    padding: 5px 8px 4px;
-    position: relative;
-
-    &:hover,
-    &--active {
-      &::after {
-        border-top: 3px solid $great-red;
-        content: '';
-        left: 0;
-        position: absolute;
-        top: -3px;
-        width: 100%;
-      }
-    }
-
-    &:focus {
-      outline: 3px solid $focus-yellow;
-    }
-
-    &--primary {
-      background-color: $light-blue;
-      font-weight: 400;
-      outline: 3px solid $light-blue;
-    }
-  }
-}
+// sass-lint:disable mixins-before-declarations, no-important, no-ids, no-duplicate-properties, declarations-before-nesting
+@import 'header/topBar';
+@import 'header/logoBar';
+@import 'header/navigationBar';
 
 .megaMenuToggle {
   background-color: $mid-blue;
@@ -172,6 +48,7 @@
 }
 
 .megaMenu {
+  padding: 28px 0 50px;
 
   &__heading {
     color: $grey-tranquil;
@@ -179,14 +56,14 @@
     font-weight: 300;
     letter-spacing: 0;
     line-height: 25px;
-    margin-bottom: 20px 0 15px;
+    margin-bottom: 5px;
   }
 
   &__list {
 
     &__item {
       font-size: 15px;
-      font-weight: 400;
+      font-weight: 300;
       padding: 10px 0 0;
 
       &--primary {
@@ -195,6 +72,20 @@
 
         @include tablet {
           background-color: initial;
+        }
+      }
+
+      &--last {
+        a {
+          border: 0 !important;
+        }
+      }
+
+      &--current {
+        a {
+          &::after {
+            opacity: 1;
+          }
         }
       }
 
@@ -207,7 +98,10 @@
         margin-left: 30px;
         padding-bottom: 10px;
         position: relative;
-        @include link-notch($great-red, -30px, 1px);
+        @include mobile {
+          @include link-notch($great-red, -30px, 1px);
+        }
+
         &::after {
           opacity: 0;
         }
@@ -231,8 +125,14 @@
           display: inline-block;
           margin-left: 0;
           padding-bottom: 0;
+          &:hover {
+          }
         }
       }
+    }
+
+    &__item__link {
+
     }
   }
 }
@@ -245,12 +145,4 @@
   &:checked~#megaMenu-wrapper {
     display: block; // sass-lint:disable-line no-ids
   }
-}
-
-#skiptocontent {
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  top: -10px;
-  width: 1px; // sass-lint:disable-line no-ids
 }
