(chore) fixing build

--- a/backend/views/pages/header.pug
+++ b/backend/views/pages/header.pug
@@ -16,6 +16,23 @@ block content
                 span.hide-mobile
                   | Part of
                 strong.hide-mobil great.gov.uk
+          ul.list-inline.list-separators.float--right
+            li.float--left.soft-half--right
+              a.link--white(href="" title="Sign in")
+                i.icon.icon--left.icon-sign-out
+                  span.visuallyhidden Sign in icon
+                span.hide-mobile Sign in
+            li.float--left.soft-half--left.hide-mobile
+              a.link--white(href="" title="Register")
+                span Register
+          ul.list-inline.list-separators.float--right.navigation-login.font-regular(id="sso-signout" style="display:none")
+            li.float--left.soft-half--right
+              a.link--white(href="https://profile.great.gov.uk/" title="Profile")
+                i.icon.icon--left.icon-sign-out
+                  span.hide-mobile Profile
+            li.float--left.soft-half--left.hide-mobile
+              a.link--white(href="https://sso.trade.great.gov.uk/accounts/logout/" title="Sign out")
+                span Sign out
     .background--great-blue.cf
       .outer-container
         .logoBar.cf
