--- a/frontend/styles/components/header/_topBar.scss
+++ b/frontend/styles/components/header/_topBar.scss
@@ -1,7 +1,8 @@
 // sass-lint:disable mixins-before-declarations, no-ids, no-duplicate-properties, declarations-before-nesting
 
 .topBar {
-  height: 2em;
+  height: 23px;
+  padding: 8px 0 3px;
 
   &__logo-hmg {
     display: block;
