--- a/frontend/styles/utilities/_vars.scss
+++ b/frontend/styles/utilities/_vars.scss
@@ -31,6 +31,7 @@ $white: #fff;
 $grey-opacity-5: rgba(250, 250, 250, .5);
 $dark-blue-opacity-0: rgba(19, 41, 101, 0);
 $dark-blue-opacity-1: rgba(19, 41, 101, 1);
+$transparent: rgba(255, 255, 255, 0);
 
 // LINK
 $link-colour: $mid-blue;
