--- a/backend/views/pages/header.pug
+++ b/backend/views/pages/header.pug
@@ -7,7 +7,7 @@ block content
     .background--dark-navy.cf
       nav.topBar
         .outer-container
-          ul.list-inline
+          ul.list-inline.float--left
             li.list-separators
               a.topBar__logo-hmg(href='https://www.gov.uk/', title='Go to the GOV.UK homepage')
                 img(alt='HM Government logo', src='/images/HM_Government_logo_horizontal.svg')
@@ -16,7 +16,7 @@ block content
                 span.hide-mobile
                   | Part of
                 strong.hide-mobil great.gov.uk
-          ul.list-inline.list-separators.float--right
+          ul.list-inline.list-separators.float--right(id="sso-signin")
             li.float--left.soft-half--right
               a.link--white(href="" title="Sign in")
                 i.icon.icon--left.icon-sign-out
@@ -25,14 +25,15 @@ block content
             li.float--left.soft-half--left.hide-mobile
               a.link--white(href="" title="Register")
                 span Register
-          ul.list-inline.list-separators.float--right.navigation-login.font-regular(id="sso-signout" style="display:none")
+
+          ul.list-inline.list-separators(id="sso-signout" style="display:none")
             li.float--left.soft-half--right
-              a.link--white(href="https://profile.great.gov.uk/" title="Profile")
-                i.icon.icon--left.icon-sign-out
-                  span.hide-mobile Profile
+              a.linkWithIcon--signout(href="https://profile.great.gov.uk/" title="Profile")
+                i.icon.icon-sign-out
+                span.hide-mobile Profile
             li.float--left.soft-half--left.hide-mobile
               a.link--white(href="https://sso.trade.great.gov.uk/accounts/logout/" title="Sign out")
-                span Sign out
+              span Sign out
     .background--great-blue.cf
       .outer-container
         .logoBar.cf
@@ -81,7 +82,7 @@ block content
               .column-one-quarter.collapse-on-mobile
                 h3.megaMenu__heading.hide-mobile Online tools
                 ul.megaMenu__list
-                  li.megaMenu__list__item
+                  li.megaMenu__list__item.megaMenu__list__item--current
                     a(href='https://www.export.great.gov.uk/opportunities', title='Export opportunities', class='') Export opportunities
                   li.megaMenu__list__item
                     a.navigation-toggle-active(href='http://find-a-buyer.export.great.gov.uk/', title='Find a buyer', class='') Find a buyer
