--- a/frontend/styles/components/_header.scss
+++ b/frontend/styles/components/_header.scss
@@ -2,16 +2,17 @@
 @import 'header/topBar';
 @import 'header/logoBar';
 @import 'header/navigationBar';
+@import 'header/megaMenu';
 
 .megaMenuToggle {
-  background-color: $mid-blue;
-  border: 0;
-  border-left: 2px solid $black;
-  border-radius: 0;
+  background: transparent;
+  border: 1px solid;
+  border-color: $grey-opacity-5;
   cursor: pointer;
   display: inline-block;
   font-size: 15px;
   font-weight: 400;
+  height: 38px;
   padding: 8px 10px 5px;
   position: absolute;
   right: 10px;
@@ -22,11 +23,20 @@
     background-color: $dark-navy;
     border-top: 3px solid $great-red;
     display: block;
-    padding-top: 5px;
+    padding-top: 6px;
+  }
+
+  @include tablet {
+    background-color: $mid-blue;
+    border-left: 2px solid $black;
+    border-width: 0 0 0 2px;
+
+    &:hover {
+      padding-top: 5px;
+    }
   }
 
   @include desktop {
-    right: 20px;
     top: 0;
   }
 
@@ -44,94 +54,6 @@
 
   &__text {
     color: $white;
-  }
-}
-
-.megaMenu {
-
-  &__heading {
-    color: $grey-tranquil;
-    font-size: 18px;
-    font-weight: 300;
-    letter-spacing: 0;
-    line-height: 25px;
-    margin-bottom: 5px;
-    padding-top: 28px;
-  }
-
-  &__list {
-
-    &__item {
-      font-size: 15px;
-      font-weight: 300;
-      padding: 10px 0 0;
-
-      &--primary {
-        background-color: $mid-blue;
-        font-weight: 500;
-
-        @include tablet {
-          background-color: initial;
-        }
-      }
-
-      &--last {
-        a {
-          border: 0 !important;
-        }
-      }
-
-      a {
-        color: $white;
-        display: block;
-        margin-left: 30px;
-        padding-bottom: 10px;
-        position: relative;
-
-        &::after {
-          opacity: 0;
-        }
-
-        &:hover {
-          &::after {
-            opacity: 1;
-          }
-        }
-
-        @include mobile {
-          @include link-notch($great-red, -30px, 1px);
-          border-bottom-width: 1px;
-          border-color: $grey-opacity-5;
-          border-style: solid;
-          margin-bottom: -1px;
-        }
-
-        @include tablet  {
-          display: inline-block;
-          margin-left: 0;
-          padding-bottom: 0;
-
-          &:hover {
-            border-bottom-width: 1px;
-            border-color: $grey-opacity-5;
-            border-style: dashed;
-            margin-bottom: -1px;
-          }
-        }
-      }
-    }
-
-    &__item--current {
-      a {
-        @include mobile {
-          @include link-notch($great-red, -30px, 1px);
-
-          &::after {
-            opacity: 1;
-          }
-        }
-      }
-    }
   }
 }
 
