--- a/frontend/styles/components/header/_topBar.scss
+++ b/frontend/styles/components/header/_topBar.scss
@@ -1,8 +1,11 @@
 // sass-lint:disable mixins-before-declarations, no-ids, no-duplicate-properties, declarations-before-nesting
 
 .topBar {
-  height: 23px;
-  padding: 8px 0 3px;
+  height: 35px;
+
+  &__logo {
+    margin-top: 3px;
+  }
 
   &__logo-hmg {
     display: block;
@@ -47,6 +50,25 @@
     strong {
       color: $white;
       font-weight: 400;
+    }
+  }
+
+  &__profile {
+    padding-top: 6px;
+  }
+
+  &__profile__link {
+    display: inline-block;
+
+    &:hover {
+      &::after {
+        border-top: 3px solid $great-red;
+        content: '';
+        left: 0;
+        position: absolute;
+        top: -6px;
+        width: 100%;
+      }
     }
   }
 }
