--- a/frontend/styles/utilities/_grid.scss
+++ b/frontend/styles/utilities/_grid.scss
@@ -1,5 +1,5 @@
 @import 'neat';
-//extracting burbon-neat grid classes for non-silent implimentation (adding classes to markup)
+//extracting bourbon-neat grid classes for non-silent implementation (adding classes to markup)
 
 .grid-container {
   @include grid-container;
