Add all column widths

--- a/frontend/styles/utilities/_grid.scss
+++ b/frontend/styles/utilities/_grid.scss
@@ -9,6 +9,17 @@
   }
 }
 
+@for $i from 1 through 12 {
+  .cols-#{$i} {
+    margin-bottom: $gutter;
+
+    @include grid-column($i);
+    @include mobile {
+      @include grid-column(12);
+    }
+  }
+}
+
 .column-full,
 .column-one-half,
 .column-one-third,
